--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,6 +7,7 @@ compatibility_flags = ["nodejs_compat"]
 WS_PATH = "ws"
 EASYTIER_DISABLE_RELAY = "0"
 EASYTIER_COMPRESS_RPC = "1"
+LOCATION_HINT = "apac"
 
 [durable_objects]
 bindings = [
